<resources>
    <string name="app_name">NOLIFE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Почта</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="nickname">Никнейм</string>
    <string name="news">Новости</string>
    <string name="Favourites">Закладки</string>
    <string name="profile">Профиль</string>
</resources>